[package]
name = "slower-surfer"
version = "0.1.0"
authors = ["Aaron Friel <mayreply@aaronfriel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.10"
tide = "^0.4.0"
async-trait = "0.1.19"

[dependencies.async-std]
version = "^1.2.0"
features = ["attributes", "unstable"]

[dependencies.surf]
version = "1.0.3"
features = ["curl-client"]
